Preserve migrated test behavior